# bataille-navale-P8

./: .gitignore  CMakeLists.txt  CODING_STYLE.org  README.md  implementation.md
doc/: Doxyfile
include/: camp.h  camp_allocator.h  cell.h  cellule.h  darray.h  game_state.h  player.h  point.h  result.h  test_framework.h
src/: camp.c  camp_allocator.c  compile_commands.json  darray.c  dumb_player.c  game_logic.c  main.c  player.c  utils.c
test/: bataille.c  test.c
